# test-project

./: .env.example  README.md  pyproject.toml  requirements.txt  start.sh  status.sh  stop.sh
app/: __init__.py  __main__.py  agent.py  agent_executor.py  helpers.py  mcp_server.py
app/auth/: __init__.py  base.py  bearer.py
app/client/: __init__.py  slack_client.py
app/config/: __init__.py  settings.py
app/tools/: __init__.py  messages.py
docs/: A2A.md  MCP.md
tests/: __init__.py  conftest.py  test_client.py  test_mcp_server.py  test_settings.py  test_tools.py
